# lyric_talk

./: Cargo.toml  README.md
examples/: pdf.rs
src/: main.rs
src/lyrics/: chat_deepseek.rs  chat_qwen.rs  download.rs  lyrics.rs  mod.rs  prompt.rs
template/: prompt.txt
