[package]
name = "lyric_talk"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

scraper = "0.12"

anyhow = "1.0.71"
thiserror={version="1.0.40"}

askama = "0.12.1"

printpdf = "0.7.0"
lopdf = "0.26"